--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,23 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="%REACT_APP_DESCRIPTION"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
+      The Open Graph protocol allows links to be expanded by Twitter, Facebook, and other platforms.
+      The variables specified here (and in title) are located in .env
+    -->
+    <meta property="og:image" content="%REACT_APP_IMAGE_URL%" />
+    <meta property="og:site_name" content="%REACT_APP_SITE_NAME%" />
+    <meta property="og:type" content="object" />
+    <meta property="og:title" content="%REACT_APP_TITLE%" />
+    <meta property="og:description" content="%REACT_APP_DESCRIPTION%" />
+    <meta property="og:url" content="%REACT_APP_URL%" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>%REACT_APP_TITLE%</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
